:experimental:
:hide-uri-scheme:
:icons: font
:source-highlighter: highlight.js
:sectnums!:
:toc: auto
:sectanchors:

== History

:leveloffset: +2

= 0.5.0-dev (2025 Xxx xx)
:revnumber: 0.5.0
:revdate: 2025-xx-xx
:revremark: -dev

* new: `Timestamp::createFromString` uses the same format as `strtotime`.
* new: `Timestamp::modify` uses the same format as `strtotime`.
* update: General maintenance and optimisations.

:leveloffset!:
:leveloffset: +2

= 0.4.0 (2025 Sep 29)
:revnumber: 0.4.0
:revdate: 2025-09-29

* new: `Timestamp` now stores the time as a microsecond timestamp
* new: `Timestamp` has new *readonly* properties for: *seconds*, *milliseconds*, *microseconds*
* new: `Timescale` enum for timestamp precision: *seconds*, *milliseconds*, *microseconds*
* update: `Timespan` `ts2dur` & `getDuration` new parameter `$spaced` to add a space between *number* & *unit*
* new: `TimeTrait` common methods for time classes
* update: `Timespan` updated the months calculation to be more accurate (average 30.44 days)
* new: `Timespan::format` added param `$units` to specify unites in duration
* new: use `FuzzyTimeTrait` with methods 'static::fussyClock' with input and `getFuzzyTime` with current `Timestamp`
* minor bugfixes and improvements to code and documentation

:leveloffset!:
:leveloffset: +2

= 0.3.1 (2022 Nov 09)
:revnumber: 0.3.1
:revdate: 2022-11-09

* new: `Timestamp::now:int` Get current unix time
* doc: Improved php doc comments

:leveloffset!:
:leveloffset: +2

= 0.3.0 (2022 Oct 14)
:revnumber: 0.3.0
:revdate: 2022-10-14

* new: `TimeWrapper::absoluteCopy` Get a copy with an absolute value
* new: `Timestamp::createFromFormat` Parses a time string according to a specified format
* update: Improvements to documentation

:leveloffset!:
:leveloffset: +2

= 0.2.0 (2022 Sep 22)
:revnumber: 0.2.0
:revdate: 2022-09-22

* new: `TimeWrapper` interface for time unit classes
* new: `Timestamp` wrapper around timestamps