@@ -5,4 +5,5 @@
 
 * new: `Timestamp::createFromString` uses the same format as `strtotime`.
 * new: `Timestamp::modify` uses the same format as `strtotime`.
+* new: `Timespan::adjustSubtract` Adjust current timespan by subtracting `$tsOrDur`.
 * update: General maintenance and optimisations.
