@@ -25,6 +25,7 @@
 
 * new: `Timestamp::createFromString` uses the same format as `strtotime`.
 * new: `Timestamp::modify` uses the same format as `strtotime`.
+* new: `Timespan::adjustSubtract` Adjust current timespan by subtracting `$tsOrDur`.
 * update: General maintenance and optimisations.
 
 :leveloffset!:
